add new test config

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,13 +1,11 @@
-APP_NAME=simply
-
 upstream unicorn {
-  server unix:/tmp/unicorn.$APP_NAME.sock fail_timeout=0;
+  server unix:/tmp/unicorn.simply.sock fail_timeout=0;
 }
  
 server {
   listen 80 default deferred;
   # server_name $APP_NAME.local;
-  root /home/ares/apps/$APP_NAME/public;
+  root /home/ares/apps/simply/public;
   
   location ^~ /assets/ {
     gzip_static on;
